src/containers/LoginPopup/LoginPopup.scss
.loginform {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  background: #0f1835;
  text-align: center;
  height: 100%;
  max-height: 880px;
  width: 100%;
  max-width: 660px;

  .logininner {
    position: absolute;
    width: 100%;
    height: 50%;
    top: 50%;
    transform: translateY(-50%);

    div {
      height: auto;
    }

    .loading_rect {
      div {
        position: absolute;
        display: inline-block;
        width: 100px;
        height: 100px;
        margin-left: -60px;
        vertical-align: middle;
      }

      &._hide {
        display: none;
      }
    }

    .close_button_rect {
      width: 30px;
      height: 30px;
      right: 0;
      top: -50%;
      position: absolute;

      .close {
        width: auto;
        height: 100%;
        display: inline-block;
        text-align: center;
        font-size: 30px;
        line-height: 25px;
        color: white;
        cursor: pointer;
        outline: none;
      }
    }
    .title {
      width: 100%;
      height: 65px;
      font-family: AvenirLT;
      font-size: 55px;
      font-weight: 900;
      font-style: oblique;
      font-stretch: normal;
      line-height: 1.18;
      letter-spacing: normal;
      text-align: center;
      color: #ff365d;
      margin-bottom: 31.1px;
      cursor: default;
    }
    .id,
    .pwd {
      background-color: #080f24;
      width: 357px;
      height: 40px;
      border-radius: 18px;
      border-color: transparent;
      font-family: NotoSansCJKkr;
      font-size: 12px;
      outline: none;
      margin-bottom: 30px;
      color: #ff365d;
      text-indent: 17px;

      &::placeholder {
        color: #ff365d;
      }

      &:focus {
        font-size: 20px;
        border: solid 2px #ff365d;
      }

      &:-webkit-autofill {
        transition: background-color 5000s ease-in-out 0s;
        -webkit-box-shadow: 0 0 0px 1000px #080f24 inset !important;
        -webkit-text-fill-color: #ff365d !important;
        caret-color: #ff365d;

        &:focus {
          border: solid 2px #ff365d;
        }
      }
    }
    .login {
      width: 357px;
      height: 40px;
      border-radius: 18px;
      border-color: transparent;
      background-color: #ff365d;
      font-size: 20px;
      color: #080f24;
      text-align: center;
      margin-bottom: 29.7px;
      cursor: pointer;
    }
    .etc {
      display: flex;
      color: #7a7a7a;
      font-family: NotoSansCJKkr;
      font-size: 15px;
      height: 22px;
      margin: 0 auto;

      .inner {
        margin: 0 auto;
        .forgot {
          width: 149px;
          display: inline-block;
          line-height: 22px;
          cursor: pointer;
        }
        .register {
          margin-left: 57px;
          width: 55px;
          display: inline-block;
          line-height: 22px;
          cursor: pointer;
        }
      }
    }
  }
}
/* ... */

